infra/k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: us.gcr.io/biblioteca-dev-316501/user
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv 
spec:
  selector:
    app: user      
  ports:
    - name: user
      protocol: TCP
      port: 4001
      targetPort: 4001
